--- a/app/blueprints/__boilerplate__/views/flask_view/routes.py.template
+++ b/app/blueprints/__boilerplate__/views/flask_view/routes.py.template
@@ -1,6 +1,7 @@
 from flask import Blueprint
 
 from app.blueprints.$blueprint_name.views.$blueprint_name import $view_name
+from .commands import init_blueprint_cli
 
 
 blueprint: Blueprint = Blueprint(
@@ -12,3 +13,5 @@ blueprint: Blueprint = Blueprint(
 
 # todo: set unique name for as_view('<name>') it will be used in flask.url_for()
 blueprint.add_url_rule('$url_rule', view_func=$view_name.as_view('myview'))
+
+init_blueprint_cli(blueprint)
