--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.11.1
 blinker==1.5
 cachelib==0.9.0
 certifi==2022.12.7
@@ -5,9 +6,13 @@ click==8.1.3
 Flask==2.2.3
 Flask-Caching==2.0.2
 Flask-DebugToolbar==0.13.1
+Flask-Migrate==4.0.4
 Flask-Minify==0.41
+Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 htmlmin==0.1.12
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsmin==3.0.1
@@ -21,7 +26,7 @@ rcssmin==1.1.1
 sentry-sdk==1.16.0
 simple-term-menu==1.5.0
 six==1.16.0
-SQLAlchemy==2.0.6
+SQLAlchemy==2.0.15
 typing_extensions==4.5.0
 urllib3==1.26.11
 uWSGI==2.0.21
